# cinezone

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  index.tsx
client/src/hooks/: index.ts  useMovieDetails.tsx  useMovieSuggestions.tsx
client/src/utils/: index.ts
client/src/utils/fetcher/: index.ts
client/src/utils/string/: index.ts
migrations/2024-11-20-022821_movies/: up.sql
migrations/2024-11-20-042051_create_movie_genres_table/: up.sql
migrations/2024-11-20-042154_create_genres_table/: up.sql
src/: main.rs  schema.rs
src/components/index-page/: by-genres.tsx  horizontal-list.tsx
src/components/movie-card/: amazon.tsx  default.tsx  netflix.tsx
src/components/nav-button/: index.tsx
src/context/: firebase.ts
src/hooks/: index.ts  useFirebase.tsx  useInfiniteLoading.tsx  useMovieSuggestions.tsx  useMovies.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/pages/[movie_id]/: index.tsx
src/utils/string/hasing/: index.ts
