[package]
name = "cinezone-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
futures = "0.3.31"
bytes = "1.8.0"
env_logger = "0.11.5"
serde = "1"
serde_json = "1"
serde_derive = "1"
json = "0.12.4"
console = "0.15.8"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32"